--- a/README.org
+++ b/README.org
@@ -323,7 +323,7 @@ Although Org2Blog doesn't make any visual changes to your writing room itself th
 
 The unavoidable burden for any writer is to find their voice. To help with that are some of the classics― On Writing Well: The Classic Guide to Writing Nonfiction by William Zinsser, Snoopy's Guide to the Writing Life by Barnaby Conrad, and On Writing: A Memoir of the Craft by Stephen King. Help keeping that voice is another story however. It takes time, practice, discipline, and hopefully some good tools. Software grammar tools are one way to do it. There are plenty, of varying quality and pedigree, but Org2Blog will only focus on two: [[https://vale.sh/][Vale]] and [[https://github.com/bnbeckwith/writegood-mode][Writegood Mode]].
 
-Vale is the ultimate grammar tool. There isn't much to expand or expound upn here. However, it's powerful, configurable, and considered a master-level grammar tool. If now is the right time to jump in then the report is that [[https://www.flycheck.org/en/latest/][flycheck]] configured [[https://emacstil.com/til/2022/03/05/setting-up-vale-prose-linter-on-emacs/][like this for Vale]] is the best way to get started. For the other 80% of us Writegood mode is the best place to start.
+Vale is the ultimate grammar tool. There isn't much to expand or expound upon here. However, it's powerful, configurable, and considered a master-level grammar tool. If now is the right time to jump in then the report is that [[https://www.flycheck.org/en/latest/][flycheck]] configured [[https://emacstil.com/til/2022/03/05/setting-up-vale-prose-linter-on-emacs/][like this for Vale]] is the best way to get started. For the other 80% of us Writegood mode is the best place to start.
 
 To make your life easier Writegood provides a few features with a big payoff that are easy to use and understand. Here is what it gives you:
 
