--- a/docs/ReleaseProcess.org
+++ b/docs/ReleaseProcess.org
@@ -73,5 +73,9 @@ When the [branch](https://github.com/org2blog/org2blog/tree/X.Y.Z) is merged I'l
 
 After day or two when it seems OK I'll tag it.
   #+end_src
+- [X] Run grammar checker
+  - [X] At minimum on the =About= section
+  - [X] More: What did you also do?
+    - Processed a lot of contractions
 - [ ] Merge branch into ~master~ push it.
 - [ ] Wait a day or two to make sure it's OK then tag it.
