--- a/HISTORY.org
+++ b/HISTORY.org
@@ -105,7 +105,7 @@ Documents notable release changes.
   - Don't populate kill ring with version message
   - Documentation cleanup
 
-** v1.1.13-v1.1.14
+** v1.1.13-v1.1.15
 
 - v1.1.13
   - Updates WordPress 5.x 🠆 6.x
@@ -133,6 +133,11 @@ Documents notable release changes.
   - Adds Value for project itself
   - Adds more documentation and images on application design
   - Explains =amsmath= status
+- v1.1.15
+  - When you add ~(emacs "XX.YY")~ to the Package-Requires header line
+    it must be at least one major version /less/ than the current version
+  -  `package-lint' checks and reports the error
+  - This release updates the dependency to 27.1
 
 * v1.0
 ** v1.0.00
