--- a/docs/DEVELOPMENT.org
+++ b/docs/DEVELOPMENT.org
@@ -17,8 +17,8 @@ Org2Blog Developer Documentation.
   - [[#why-does-org2blog-talk-about-save-view-publish-and-trash-so-much][Why Does Org2blog Talk About Save, View, Publish, And Trash So Much?]]
   - [[#why-does-org2blog-talk-about-buffers-subtrees-posts-and-pages-so-much][Why Does Org2blog Talk About Buffers, Subtrees, Posts, And Pages So Much?]]
   - [[#why-isnt-the-package-name-org2wordpress][Why Isn't The Package Name Org2wordpress?]]
-  - [[#what-is-metaweblog-and-why-is-it-in-org2blog][What Is Metaweblog And Why Is It In Org2blog?]]
-  - [[#why-does-org2blog-use-both-the-xml-rpc-metaweblog-and-wordpress-api][Why Does Org2blog Use Both The XML-RPC Metaweblog And WordPress Api]]
+  - [[#what-is-metaweblog-and-why-is-it-in-org2blog][What Is MetaWeblog And Why Is It In Org2blog?]]
+  - [[#why-does-org2blog-use-both-the-xml-rpc-metaweblog-and-wordpress-api][Why Does Org2blog Use Both The XML-RPC MetaWeblog And WordPress Api]]
   - [[#how-does-org2blog-manage-autoloads][How Does Org2blog Manage Autoloads?]]
 - [[#data-model--functional-design][Data Model & Functional Design]]
   - [[#create][Create]]
@@ -226,7 +226,7 @@ Org2Blog is blogging software. You write everything in Org mode and publish it t
 
 In that historical context and considering goals today the name remains Org2Blog instead of Org2WordPress.
 
-** What Is Metaweblog And Why Is It In Org2blog?
+** What Is MetaWeblog And Why Is It In Org2blog?
 
 #+begin_quote
 The [[https://en.wikipedia.org/wiki/MetaWeblog][MetaWeblog API]] is an application programming interface created by software developer Dave Winer that enables weblog entries to be written, edited, and deleted using web services.
@@ -244,7 +244,7 @@ Org2Blog uses this client to work with WordPress
 
 =metaweblog.el= is provided a package from Org2Blog to make it reusable for others via the standard packaging system.
 
-** Why Does Org2blog Use Both The XML-RPC Metaweblog And WordPress Api
+** Why Does Org2blog Use Both The XML-RPC MetaWeblog And WordPress Api
 
 Both APIs are required to get the job done.
 
