Communicate gratitude to XML-RPC

--- a/README.org
+++ b/README.org
@@ -1239,6 +1239,7 @@ See [[./HISTORY.org][HISTORY]].
 :END:
 
 - This package was inspired by [[http://www.mail-archive.com/gnu-emacs-sources@gnu.org/msg01576.html][Ashish Shukla]] and created by [[https://github.com/punchagan][Puneeth Chaganti]].
+- [[https://github.com/xml-rpc-el/xml-rpc-el][XML-RPC]] and [[https://github.com/org2blog/org2blog/blob/master/metaweblog.el][metaweblog.el]] give life to Org2Blog.
 - Cari at [[https://sepiarainbow.com/][Sepia Rainbow Designs]] drew the brilliant logo.
 - [[./docs/Org2Bloggers.org][The Hundreds Of Org2Bloggers Out There]].
   - Be sure to add /your/ or /your friends/ or /anybody's/ blog to the list!
