--- a/FUTURE.org
+++ b/FUTURE.org
@@ -34,3 +34,4 @@
 - Keeping issues in a closed state with the "on-hold" label and this file at
   the same time is starting to get confusing.
 - GPL releases for previous committers.
+- Use ~reporter-submit-bug-report~ instead of custom-created
