--- a/docs/DEVELOPMENT.org
+++ b/docs/DEVELOPMENT.org
@@ -20,6 +20,9 @@ Org2Blog Developer Documentation.
   - [[#how-does-org2blog-manage-autoloads][How Does Org2blog Manage Autoloads?]]
 - [[#metaweblog][MetaWeblog]]
   - [[#what-is-metaweblog][What Is MetaWeblog?]]
+  - [[#what-blogs-use-metaweblog][What Blogs Use MetaWeblog?]]
+  - [[#what-is-the-official-metaweblog-api][What Is The Official MetaWeblog API?]]
+  - [[#metaweblogs-api-support][MetaWeblog's API Support]]
   - [[#why-is-metaweblog-in-this-project][Why is MetaWeblog In This Project?]]
   - [[#what-is-metaweblog-and-why-is-it-in-org2blog][What Is MetaWeblog And Why Is It In Org2blog?]]
   - [[#why-does-org2blog-use-both-the-xml-rpc-metaweblog-and-wordpress-api][Why Does Org2blog Use Both The XML-RPC MetaWeblog And WordPress API]]
